# smart-hot-water-tank

./: Cargo.toml  LICENSE  README.md  diagram.json  wokwi.toml
.github/workflows/: backend_ci.yml  rust_ci.yml  sensor_ci.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/src/: main.rs
sensor/: .env.example  Cargo.toml
sensor/.cargo/: config.toml
sensor/src/: main.rs
src/: main.rs
