[package]
name = "smart-hot-water-tank"
version = "0.1.0"
authors = ["Bernd Storath <999999bst@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "smart-hot-water-tank"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
epd-waveshare = "0.6.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
max31855-rs = "0.1.0"
u8g2-fonts = "0.5.1"
anyhow = "1.0.95"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", branch = "master" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", branch = "master" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "master" }
embuild = { git = "https://github.com/esp-rs/embuild", branch = "master" }
