[package]
name = "smart-hot-water-tank"
version = "0.1.0"
authors = ["Bernd Storath <999999bst@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.39"
