[package]
name = "smart-hot-water-tank"
version = "0.1.0"
authors = ["Bernd Storath <999999bst@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"

[[bin]]
name = "smart-hot-water-tank"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
epd-waveshare = "0.6.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
max31855-rs = "0.1.0"
u8g2-fonts = "0.5.1"
anyhow = "1.0.95"
embedded-svc = "0.28.1"

[build-dependencies]
embuild = "0.33.0"
cc = "1.2.7" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
